--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-countdown-circle-timer": "^3.0.6",
     "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
+    "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "twrnc": "^2.2.0"
